--- a/en/doc/Makefile.def
+++ b/en/doc/Makefile.def
@@ -2,7 +2,7 @@ EN_DOC_BASE=doc
 EN_DOC_DIR=$(EN_DIR)/$(EN_DOC_BASE)
 EN_DOC_PARTS=$(EN_DOC_DIR)/*.tex
 
-EN_DOC_PDF=en-$(EN_DOC_BASE).pdf
+EN_DOC_PDF=en-$(EN_DOC_BASE)-coding.pdf
 
 FINAL_EN_DOC_PDF=$(FINAL_DIR)/$(EN_DOC_PDF)
 
