--- a/en/doc/Makefile.def
+++ b/en/doc/Makefile.def
@@ -1,6 +1,8 @@
 EN_DOC_BASE=doc
 EN_DOC_DIR=$(EN_DIR)/$(EN_DOC_BASE)
-EN_DOC_PARTS=$(EN_DOC_DIR)/*.tex
+EN_DOC_PARTS= \
+  $(EN_DOC_DIR)/*.tex \
+  $(EN_DOC_DIR)/rules/*.tex
 
 EN_DOC_PDF=en-$(EN_DOC_BASE)-coding.pdf
 
